--- a/index.html
+++ b/index.html
@@ -20,8 +20,16 @@
         <h2>"The hermit crab prefers a little shell for his home. He knows what the world holds." -Kamo no Chōmei (c.1155-1216)</h2>
         </header>
         <main>
-        
-    
+            <h3>Key Thinkers</h3>
+            <h4>Kamo no Chomei</h4>
+            <h4>Yoshida Kenko</h4>
+            <h4>Sen no Rikyu</h4>
+            <h4>Matsuo Basho</h4>
+            <h4>Jean-Jacques Rousseau</h4>
+            <h4>Johnny Appleseed</h4>
+            <h4>Marie Kondo</h4>
+            <h4>The Minimalists</h4>
+            <h4>Courtney Carver</h4>
         </main>
 </body>
 </html>
