Adding event listener for detect click outside

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <main>
             <h3>Key Thinkers</h3>
             <h4>Kamo no Chomei</h4>
-                <h5></h5>
+                <h5>A Japanese minimalist who lived in a ten-foot-square hut in the early 13th century.</h5>
             <h4>Yoshida Kenko</h4>
                 <h5></h5>
             <h4>Sen no Rikyu</h4>
